--- a/Workshop2-2.ipynb
+++ b/Workshop2-2.ipynb
@@ -2118,9 +2118,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
